force-app/main/default/objects/Route__c/fields/ID_ERP__c.field-meta.xml
<CustomField>
    <fullName>ID_ERP__c</fullName>
    <label>ID in ERP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>