force-app/main/default/objects/Route__c/fields/PROD_DAYS__c.field-meta.xml
<CustomField>
    <fullName>PROD_DAYS__c</fullName>
    <label>Prod Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>