force-app/main/default/objects/Route__c/fields/RouteEmpty__c.field-meta.xml
<CustomField>
    <fullName>RouteEmpty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Route Empty</label>
    <type>Checkbox</type>
</CustomField>