force-app/main/default/objects/Route__c/fields/USE_PCS__c.field-meta.xml
<CustomField>
    <fullName>USE_PCS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use PCS</label>
    <type>Checkbox</type>
</CustomField>