force-app/main/default/objects/Route__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ID_ERP__c</columns>
    <columns>IsActive__c</columns>
    <columns>PROD_DAYS__c</columns>
    <columns>RouteEmpty__c</columns>
    <columns>Shop__c</columns>
    <columns>USE_PCS__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>